@@ -1,5 +1,10 @@
 2010-12-11  Lee Howard <faxguy@howardsilvan.com>
 
+	* tools/fax2ps.c: replace unsafe tmpfile() with mkstemp()
+	http://bugzilla.maptools.org/show_bug.cgi?id=2118
+
+2010-12-11  Lee Howard <faxguy@howardsilvan.com>
+
 	* libtiff/tif_ojpeg.c, libtiff/tif_pixarlog.c,
 	  libtiff/tif_zip.c: fix build errors for VC6
 	http://bugzilla.maptools.org/show_bug.cgi?id=2105
